# misis2023f-22-3-dudko-i-a

./: CMakeLists.txt  README.md  codeforces.id  status.md
prj.codeforces/: 0050a.cpp  0144a.cpp  0160a.cpp  0271a.cpp  0280c.cpp  0339a.cpp  0617a.cpp  0699a.cpp  1091b.cpp  1091c.cpp  1535b.cpp  1669c.cpp  1675c.cpp  1690d.cpp  1731c.cpp  1744c.cpp  1900b.cpp  1909a.cpp  1915a.cpp  1917b.cpp  271a.cpp  617a.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt  map.cxx
prj.cw/denviz/: CMakeLists.txt
prj.cw/generation/: CMakeLists.txt
prj.cw/generation/prj.test/: CMakeLists.txt  test.cpp
prj.cw/generation/visualization/: CMakeLists.txt
prj.cw/nvo/: CMakeLists.txt
prj.cw/nvo/nvolib/: nvolib.cpp
prj.cw/nvo/tester/: CMakeLIsts.txt  tester.cpp
prj.cw/nvo/visualization/: visualization.cpp
prj.cw/nvo/visualization/include/visualization/: visualization.hpp
prj.cw/prj.test/: CMakeLIsts.txt  datatest.cpp  nvotest.cpp
