set(CMAKE_CXX_STANDARD 20)

add_executable(0050a 0050a.cpp)
add_executable(0144a 0144a.cpp)
add_executable(0160a 0160a.cpp)
add_executable(0271a 0271a.cpp)
add_executable(0280c 0280c.cpp)
add_executable(0339a 0339a.cpp)
add_executable(0617a 0617a.cpp)
add_executable(0699a 0699a.cpp)
add_executable(1091b 1091b.cpp)
add_executable(1091c 1091c.cpp)
add_executable(1535b 1535b.cpp)
add_executable(1669с 1669с.cpp)
add_executable(1675с 1675с.cpp)
add_executable(1690d 1690d.cpp)
add_executable(1731c 1731c.cpp)
add_executable(1744c 1744c.cpp)
add_executable(1900b 1900b.cpp)
add_executable(1909a 1909a.cpp)
add_executable(1915a 1915a.cpp)
add_executable(1917b 1917b.cpp)
